# job-alert-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PRODUCTION_CHECKLIST.md  Procfile  README.md  RENDER_DEPLOYMENT_GUIDE.md  SECURITY.md  app.py  asgi.py  bot.py  config.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  start.sh  test_bot.py
.github/workflows/: ci-cd.yml
database/: db.py  models.py
handlers/: admin.py  jobs.py  start.py
services/: ai_categorizer.py  notifier.py  scheduler.py  scraper_engine.py
src/job_alert_bot/: __init__.py
src/job_alert_bot/config/: settings.py
src/job_alert_bot/database/: connection_pool.py
src/job_alert_bot/monitoring/: metrics.py
src/job_alert_bot/utils/: circuit_breaker.py  retry.py  structured_logging.py  validation.py
tests/: conftest.py
tests/unit/: test_circuit_breaker.py  test_validation.py
utils/: logger.py
